# lmssync

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: __init__.py  settings.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  SETUP.md  TROUBLESHOOTING.md
src/: __init__.py  main.py
src/canvas/: __init__.py  client.py  models.py
src/outlook/: __init__.py  client.py  models.py
src/storage/: __init__.py  models.py  state_store.py
src/sync/: __init__.py  diff.py  engine.py
tests/: conftest.py  test_canvas_models.py  test_config.py  test_state_store.py  test_sync_diff.py
